// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<OrderedList /> > Default story renders snapshot 1`] = `
<ol
  class="_list_3b68af _list--size-md_3b68af _list--markerType-default_3b68af"
>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 1
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 2
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 3
  </li>
</ol>
`;

exports[`<OrderedList /> > Medium story renders snapshot 1`] = `
<ol
  class="_list_3b68af _list--size-md_3b68af _list--markerType-default_3b68af"
>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 1
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 2
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 3
  </li>
</ol>
`;

exports[`<OrderedList /> > Nested story renders snapshot 1`] = `
<ol
  class="_list_3b68af _list--size-md_3b68af _list--markerType-default_3b68af"
>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 1
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 2
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 3
    <ol
      class="_list_3b68af _list--size-md_3b68af _list--markerType-default_3b68af"
    >
      <li
        class="_list-item_3b68af _list-item--size-md_3b68af"
      >
        test 1
      </li>
      <li
        class="_list-item_3b68af _list-item--size-md_3b68af"
      >
        test 2
      </li>
    </ol>
  </li>
</ol>
`;

exports[`<OrderedList /> > None story renders snapshot 1`] = `
<ol
  class="_list_3b68af _list--size-md_3b68af _list--markerType-none_3b68af"
>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 1
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 2
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 3
  </li>
</ol>
`;

exports[`<OrderedList /> > Small story renders snapshot 1`] = `
<ol
  class="_list_3b68af _list--size-sm_3b68af _list--markerType-default_3b68af"
>
  <li
    class="_list-item_3b68af _list-item--size-sm_3b68af"
  >
    test 1
  </li>
  <li
    class="_list-item_3b68af _list-item--size-sm_3b68af"
  >
    test 2
  </li>
  <li
    class="_list-item_3b68af _list-item--size-sm_3b68af"
  >
    test 3
  </li>
</ol>
`;

exports[`<OrderedList /> > XSmall story renders snapshot 1`] = `
<ol
  class="_list_3b68af _list--size-xs_3b68af _list--markerType-default_3b68af"
>
  <li
    class="_list-item_3b68af _list-item--size-xs_3b68af"
  >
    test 1
  </li>
  <li
    class="_list-item_3b68af _list-item--size-xs_3b68af"
  >
    test 2
  </li>
  <li
    class="_list-item_3b68af _list-item--size-xs_3b68af"
  >
    test 3
  </li>
</ol>
`;

exports[`<UnorderedList /> > CustomMarker story renders snapshot 1`] = `
<ul
  class="_list_3b68af _list--size-md_3b68af _list--markerType-default_3b68af"
>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af list-['+']"
  >
    test 1
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af list-['–']"
  >
    test 2
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af list-['*']"
  >
    test 3
  </li>
</ul>
`;

exports[`<UnorderedList /> > Default story renders snapshot 1`] = `
<ul
  class="_list_3b68af _list--size-md_3b68af _list--markerType-default_3b68af"
>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 1
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 2
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 3
  </li>
</ul>
`;

exports[`<UnorderedList /> > Medium story renders snapshot 1`] = `
<ul
  class="_list_3b68af _list--size-md_3b68af _list--markerType-default_3b68af"
>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 1
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 2
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 3
  </li>
</ul>
`;

exports[`<UnorderedList /> > Nested story renders snapshot 1`] = `
<ul
  class="_list_3b68af _list--size-md_3b68af _list--markerType-default_3b68af"
>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 1
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 2
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 3
    <ul
      class="_list_3b68af _list--size-md_3b68af _list--markerType-default_3b68af"
    >
      <li
        class="_list-item_3b68af _list-item--size-md_3b68af"
      >
        test 1
      </li>
      <li
        class="_list-item_3b68af _list-item--size-md_3b68af"
      >
        test 2
      </li>
    </ul>
  </li>
</ul>
`;

exports[`<UnorderedList /> > None story renders snapshot 1`] = `
<ul
  class="_list_3b68af _list--size-md_3b68af _list--markerType-none_3b68af"
>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 1
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 2
  </li>
  <li
    class="_list-item_3b68af _list-item--size-md_3b68af"
  >
    test 3
  </li>
</ul>
`;

exports[`<UnorderedList /> > Small story renders snapshot 1`] = `
<ul
  class="_list_3b68af _list--size-sm_3b68af _list--markerType-default_3b68af"
>
  <li
    class="_list-item_3b68af _list-item--size-sm_3b68af"
  >
    test 1
  </li>
  <li
    class="_list-item_3b68af _list-item--size-sm_3b68af"
  >
    test 2
  </li>
  <li
    class="_list-item_3b68af _list-item--size-sm_3b68af"
  >
    test 3
  </li>
</ul>
`;

exports[`<UnorderedList /> > XSmall story renders snapshot 1`] = `
<ul
  class="_list_3b68af _list--size-xs_3b68af _list--markerType-default_3b68af"
>
  <li
    class="_list-item_3b68af _list-item--size-xs_3b68af"
  >
    test 1
  </li>
  <li
    class="_list-item_3b68af _list-item--size-xs_3b68af"
  >
    test 2
  </li>
  <li
    class="_list-item_3b68af _list-item--size-xs_3b68af"
  >
    test 3
  </li>
</ul>
`;
